# k8s-agent

./: Dockerfile  README.md  pyproject.toml
example/: k8s-agent.yaml  rbac.yaml
src/: main.py
src/dto/: command_dto.py
